DevTools: fix elements panel nowrap mode on wide panel settings.
Review URL: https://codereview.chromium.org/690673002

git-svn-id: svn://svn.chromium.org/blink/trunk@184592 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/elements/elementsTreeOutline.css
+++ b/front_end/elements/elementsTreeOutline.css
@@ -5,6 +5,7 @@
  */
 
 .outline-disclosure {
+    width: 100%;
     display: inline-block;
     line-height: normal;
 }
